--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Node.js + MongoDB: JWT Authentication & Authorization",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "madderchod": "./node_modules/nodemon/bin/nodemon.js server.js"
   },
   "keywords": [
     "node.js",
@@ -18,8 +19,10 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
+    "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.1"
+    "mongoose": "^6.7.2"
+  }, "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
