--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.7.2"
-  }, "devDependencies": {
+    "mongoose": "^6.7.2",
+    "multer-gridfs-storage": "^5.0.2"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.19"
   }
 }
