--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "madderchod": "./node_modules/nodemon/bin/nodemon.js server.js"
+    "madderchod": "./node_modules/nodemon/bin/nodemon.js server.js",
+    "start": "nodemon server.js"
   },
   "keywords": [
     "node.js",
